--- a/src/index.html
+++ b/src/index.html
@@ -590,15 +590,23 @@
             width="100%"
           ></object>
         </button>
+        <div class="hidden lg:block">
+          <button class="darkModeElements notShown w-[44px] h-[44px] relative">
+            <a href="#" target="_blank"  class="absolute top-0 bottom-0 left-0 right-0 z-30" ></a>
+            <object data="../photo/icon-QR-dark.svg" width="100%"></object>
+          </button>
 
-        <button class="darkModeElements hidden lg:notShown w-[44px] h-[44px] relative">
-          <a href="#" target="_blank"  class="absolute top-0 bottom-0 left-0 right-0 z-30" ></a>
-          <object data="../photo/icon-QR-dark.svg" width="100%"></object>
-        </button>
-        <button class="lightModeElements hidden lg:isShown w-[44px] h-[44px] relative">
-          <a href="#" target="_blank"  class="absolute top-0 bottom-0 left-0 right-0 z-30" ></a>
-          <object data="../photo/icon-QR.svg" width="100%"></object>
-        </button>
+        </div>
+        <div class="hidden lg:block">
+          <button class="lightModeElements isShown w-[44px] h-[44px] relative">
+            <a href="#" target="_blank"  class="absolute top-0 bottom-0 left-0 right-0 z-30" ></a>
+            <object data="../photo/icon-QR.svg" width="100%"></object>
+          </button>
+
+        </div>
+
+       
+        
       </div>
     </div>
 
